# FlinkSketch

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  THIRD-PARTY.txt  pom.xml
.github/workflows/: ci.yml
docs/: ADDING_SKETCHES.md  SKETCH_REFERENCE.md
flinksketch-bench/: README.md  pom.xml
flinksketch-bench/benchmarks/experiments/: post_experiment.py  pyproject.toml  start_experiment.py
flinksketch-bench/benchmarks/experiments/sweeps/: run_cardinality_sweep.sh  run_items_per_window_sweep.sh  run_window_sweep.sh
flinksketch-bench/benchmarks/experiments/utils/post/: experiment_analysis.py  experiment_orchestrator.py  memory_visualization.py  output_parsers.py  visualization.py
flinksketch-bench/benchmarks/experiments/utils/start/: container_manager.py  job_monitor.py
flinksketch-bench/benchmarks/setup/: async_profiler_setup.sh  env_setup.sh
flinksketch-bench/benchmarks/test/: test-library-jar.sh
flinksketch-bench/config/: README.md
flinksketch-bench/config/templates/: experiment_config.yaml
flinksketch-bench/config/templates/aggregations/baseline/: cardinality_config.yaml  entropy_config.yaml  freq_config.yaml  per_key_quant_config.yaml  quant_config.yaml  topk_config.yaml
flinksketch-bench/config/templates/aggregations/custom/: cardinality_config.yaml  freq_cms_config.yaml  (+3 more)
flinksketch-core/: pom.xml
flinksketch-core/src/main/resources/: log4j2.xml
flinksketch-examples/: README.md  pom.xml
flinksketch-examples/src/main/resources/: log4j2.xml
src/license/: header.txt
test-integration/library-jar-test/: pom.xml
(+71 files in other folders)
